--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.0.2",
     "react-icons": "^4.2.0",
