fix : 회의 피드백 반영 수정

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "date": "^1.0.2",
+    "date-fns": "^2.21.1",
     "fns": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-lodash": "^0.1.2",
     "react-number-format": "^4.5.5",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
