feat : 환경설정퍼블리싱

--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "date-fns": "^2.21.1",
     "fns": "^1.0.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-lodash": "^0.1.2",
+    "react-moment": "^1.1.1",
     "react-number-format": "^4.5.5",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.0.5",
+    "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
