--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.0.2",
     "react-icons": "^4.2.0",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
