--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "date": "^1.0.2",
     "date-fns": "^2.21.1",
+    "file-saver": "^2.0.5",
     "fns": "^1.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
