--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
+    "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-lodash": "^0.1.2",
