--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
+    "bable-loader": "^0.0.1-security",
     "bfj": "^7.0.2",
     "bootstrap": "^4.6.0",
     "camelcase": "^6.1.0",
