--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "date": "^1.0.2",
     "date-fns": "^2.21.1",
     "file-saver": "^2.0.5",
@@ -21,11 +22,11 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
-    "react-datepicker": "^3.8.0",
-    "bootstrap": "^4.6.0",
     "react-audio-player": "^0.17.0",
     "react-bootstrap": "^1.5.2",
+    "react-datepicker": "^3.8.0",
     "react-daum-postcode": "^2.0.6",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.0.2",
     "react-icons": "^4.2.0",
