--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "date": "^1.0.2",
-    "date-fns": "^2.21.1",
+    "date-fns": "^2.22.1",
     "file-saver": "^2.0.5",
     "fns": "^1.0.0",
     "moment": "^2.29.1",
@@ -25,6 +25,8 @@
     "react": "^17.0.2",
     "react-audio-player": "^0.17.0",
     "react-bootstrap": "^1.5.2",
+    "react-calendar": "^3.4.0",
+    "react-date-range": "^1.1.4",
     "react-datepicker": "^3.8.0",
     "react-daum-postcode": "^2.0.6",
     "react-device-detect": "^1.17.0",
@@ -33,6 +35,7 @@
     "react-icons": "^4.2.0",
     "react-lodash": "^0.1.2",
     "react-moment": "^1.1.1",
+    "react-nice-dates": "^3.1.0",
     "react-number-format": "^4.5.5",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
